@@ -35,7 +35,7 @@ my $perl_document;
 sub do_weave {
   my( $weaver, $filename ) = @_;
 
-  my $in_pod   = do { local $/; open my $fh, '<:encoding(UTF-8)', "t/eg/$filename.in.pod"; <$fh> };
+  my $in_pod   = do { local $/; open my $fh, '<:raw:bytes', "t/eg/$filename.in.pod"; <$fh> };
   my $expected = do { local $/; open my $fh, '<:encoding(UTF-8)', "t/eg/$filename.out.pod"; <$fh> };
   my $document = Pod::Elemental->read_string($in_pod);
 
